@@ -18,4 +18,4 @@ if ! id "$DOCKER_USER" >/dev/null 2>&1; then
 
 fi
 
-exec su-exec ${DOCKER_USER}:${DOCKER_GROUP} java -jar -Xms${MEMORY_SIZE} -Xmx${MEMORY_SIZE} -Dlog4j2.formatMsgNoLookups=true -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=mcflags.emc.gs -jar /opt/minecraft/server.jar nogui
+exec su-exec ${DOCKER_USER}:${DOCKER_GROUP} java -jar -Xms${MEMORY_SIZE} -Xmx${MEMORY_SIZE} -Dlog4j2.formatMsgNoLookups=true -XX:+UseZGC -XX:+AlwaysPreTouch -XX:+UseStringDeduplication -XX:+UseCompactObjectHeaders -jar /opt/minecraft/server.jar nogui
